# VkInternship

./: .gitignore  CMakeLists.txt  counter.cpp  main.cpp
counter/: CMakeLists.txt  counter.cpp  counter.h
test/: CMakeLists.txt  test_counter.cpp
